# Study_platform

./: README.md
env_for_platform/: pyproject.toml
env_for_platform/educak/: apps.py
env_for_platform/study_platform/: manage.py
env_for_platform/study_platform/study_platform/: asgi.py  settings.py  urls.py  wsgi.py
